# net-dock

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: README.zh-CN.md  release-updates.zh-CN.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
