[package]
name = "net-dock"
version = "0.1.3"
description = "Windows network manager for adapters, DNS, and VPN."
authors = ["net-dock contributors"]
edition = "2021"

[lib]
name = "net_dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
